# dmcp

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  Agents.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.fastapi  Dockerfile.mcp  EFFICIENCY_REPORT.md  Makefile  README.md  ROUTES.md  alembic-warehouse.ini  alembic.ini  api_run.py  bearer_token.txt  bearer_token_clean.txt  client.py  dbmcp.db  docker-compose.yml  env.example  jwt_token.txt  kill_python.sh  main.py  mcp_run.py  pyproject.toml  run.py  run_mcp_server.py  test_auth.py  test_auth_endpoint.py  test_error_handling.py
alembic/: env.py
alembic-warehouse/: env.py
alembic-warehouse/versions/: 001_create_silverston_boat_warehouse_schema.py  002_insert_sample_boat_parts_data.py
alembic/versions/: 001_initial_database_schema.py  001_initial_schema.py  002_add_users_table.py  002_rename_queries_table_to_tools.py  003_add_tags_to_tools.py  003_add_tool_type_column.py  004_add_users_table.py  004_create_tags_table.py  005_add_tags_column.py
app/: __init__.py  database.py  database_connections.py  main.py  mcp_server.py  mcp_tools.py  services.py
app/core/: __init__.py  auth_middleware.py  config.py  encryption.py  exceptions.py  jwt_validator.py  responses.py  token_processor.py
app/datasources/: __init__.py  base.py  databricks.py  mysql.py  postgresql.py  sqlite.py
app/mcp/: __init__.py  server.py  tools.py
app/mcp/middleware/: auth.py  logging.py  tools.py
app/models/: database.py  schemas.py
app/repositories/: __init__.py  base.py  datasource_repository.py  query_repository.py  tag_repository.py  tool_repository.py  user_repository.py
app/routes/: auth.py  datasources.py  execute.py  health.py  queries.py  tags.py  tools.py  users.py
app/services/: __init__.py  auth_service.py  datasource_service.py  jinja_template_service.py  query_execution_service.py  query_service.py  tag_service.py  tool_execution_service.py  tool_service.py  user_service.py
bundles/datamcp/: appbundle.yml
bundles/dmcp/: appbundle.yml
data/: .gitkeep
dbmcp-react-old-backup/src/: main.tsx
dbmcp-react-old-backup/src/components/: Layout.tsx
dbmcp-react-shadcn/: index.html  package-lock.json  package.json
dbmcp-react-shadcn/src/: App.tsx
dmcp-react/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
dmcp-react/src/: App.tsx
docs/: databricks_setup.md  health.bru  jinja_templates.md  package-lock.json  package.json
docs/api/: bruno.json
docs/datasources/: create.bru
docs/manual/: configure-datasources.md  connect-mcp-clients.md  create-tools.md  databricks_setup.md  docker-environment-variables.md  get-started.md  index.md  introduction.md  user-management.md
docs/queries/: create.bru  execute.bru  list.bru
docs/sample_requests/: auth_examples.md  create_query_complex.json  create_query_simple.json  curl_examples.md  jinja_template_examples.md  test_connection_examples.md
frontend/: .gitignore  README.md  THEME.md  debug-cors.html  index.html  package-lock.json  package.json  test-auth.html  vite.config.ts
frontend/datasource/: README.md  datasource.js  edit.html  edit.js  index.html
frontend/shared/: api.js  auth.js  common.css  config.js  navigation.js  sidebar-styles.css  sidebar.js
frontend/src/: App.tsx  index.css
frontend/tools/: edit.html  edit.js  index.html  tools.js
frontend/users/: README.md  change-password.html  change-password.js  generate-token.html  generate-token.js
infra/: EC2_DEPLOYMENT_GUIDE.md  EKS_CLEANUP_SUMMARY.md
infra/config/: development.yml  production.yml
infra/nginx/: nginx.conf
infra/scripts/: entrypoint.sh
infra/terraform/: .terraform.lock.hcl  backend-development.hcl  backend-production.hcl  backend-staging.hcl  locals.tf  main.tf  outputs.tf  terraform.tfstate.backup  terraform.tfvars  variables.tf
public/: .gitkeep
sample_requests/: create_query.json  execute_query_examples.md  test_connection_examples.md
scripts/: apptoken.py  client.py  dbmigrate.py  generate_token.py  test_token_generation.py  test_user_creation.py  test_users_me.py
tests/: README_datasource_tests.md  README_testdb_setup_with_data.md  conftest.py  run_datasource_tests.py  setup_pg_with_test_data.py  test.db  test_auth.py  test_databricks.py  test_datasource_api.py  test_datasource_endpoints.py  test_db_init.py  test_db_manager.py  test_encryption.py  test_jinja_templates.py  test_jwt_validator.py  test_mcp.py  test_mcp_server.py  test_server.py  test_standardized_responses.py  test_user.py  test_users_me_endpoint.py
tests/example/: aws_cost.sql
(+131 files in other folders)
