[project]
name = "dbmcp"
version = "0.1.0"
description = "Lightweight SQLite database backend server with FastAPI and MCP support"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "alembic>=1.12.0",
    "cryptography>=41.0.0",
    "jinja2>=3.1.0",
    "fastmcp>=2.6.0",
    "pyjwt>=2.8.0",
    "asyncpg>=0.28.0",
    "psycopg2-binary>=2.9.9",
    "aiomysql>=0.2.0",
    "boto3>=1.34.0",
    "ansible>=10.7.0",
    "ansible-core>=2.17.13",
    "docker>=7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
