[project]
name = "dmcp"
version = "0.1.0"
description = "Database backend server with FastAPI and MCP support"
authors = [
    {name = "Suresh Thalluri", email = "suresh@leaninnovations.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.19.0",
    "cryptography>=41.0.0",
    "jinja2>=3.1.0",
    "fastmcp>=2.11",
    "pyjwt>=2.8.0",
    "databricks-sql-connector>=2.9.0",
    "fastapi>=0.116.1",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
    "greenlet>=3.2.3",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.8.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
line-ending = "auto"
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "N"]
ignore = ["E402"]  # Allow module level imports not at top of file (common in alembic)

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402"]  # Allow imports after path manipulation
"tests/*.py" = ["E501"]  # Allow long lines in test files

[tool.ruff.lint.isort]
known-first-party = ["app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.28.1",
]
